cluster/apps/default/ungermanify/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ungermanify
  namespace: default
spec:
  ports:
    - port: 9292
      targetPort: 9292
      protocol: TCP
      name: http
  selector:
    app: ungermanify
