cluster/apps/default/ungermanify/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ungermanify
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_DOMAIN}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflarewarp@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ungermanify.${SECRET_LAB_DOMAIN}
      secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
  rules:
    - host: ungermanify.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ungermanify
                port:
                  name: http
